--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-/*******General Reset*******/
-
-* {
+******General Reset****** {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -20,7 +18,6 @@
 }
 
 /*******Footer*******/
-
 .footer {
   height: 80px;
   background-color: steelblue;
@@ -32,11 +29,10 @@
 }
 
 /*******App container*******/
-
 .app-container {
   min-height: 100vh;
   width: 100%;
-  /* max-width: 1200px; */
+  max-width: 1200px;
 }
 
 /*******Form*******/
@@ -80,13 +76,11 @@ form {
 /*******Edit*******/
 
 .edit-container {
-  width: 100%;
-  min-height: 80vh;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-left: auto;
-  margin-right: auto;
-  margin-left: 40px;
+  min-width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
 }
 
 .container {
@@ -140,7 +134,7 @@ input {
 }
 
 .search_input {
-  height: 40px;
+  height: 35px;
   padding: 5px;
   font: 1rem;
   width: 300px;
@@ -196,7 +190,7 @@ input {
   font: 1rem;
   padding: 5px;
   width: 150px;
-  height: 40px;
+  height: 50px;
   color: white;
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
@@ -245,10 +239,11 @@ input {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .container{
+  .container {
     max-width: 320px;
   }
-  .btn, .delete-btn{
+  .btn,
+  .delete-btn {
     width: 120px;
   }
 }
